new Scanner feature support